--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <title>FFXIV Twin Helper</title>
   <meta name="description" content="FFXIV 多目标助手">
-  <script type="module" crossorigin src="/assets/index.25741ea8.js"></script>
-  <link rel="stylesheet" href="/assets/index.9c2a53bd.css">
+  <script type="module" crossorigin src="./assets/index.c89e9827.js"></script>
+  <link rel="stylesheet" href="./assets/index.9c2a53bd.css">
 </head>
 
 <body>
